--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mouse-mazes-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://MMCurriculum.github.io/Mouse-Mazes",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -12,7 +12,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -30,6 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
-
